rs/idl-gen/tests/snapshots/generator__program_idl_works_with_non_empty_ctors.snap
---
source: rs/idl-gen/tests/generator.rs
expression: idl
---

!@sails: 1.0.1

service Test@0xd42ae9a4dc1efdf0 {
    events {
        /// `That` Done too
        ThatDone {
            /// This is `p1` field
            p1: String,
        },
        /// `This` Done
        ThisDone (
            /// This is unnamed field, comments ignored
            u32,
        ),
        ThisDoneTwice (
            /// This is the first unnamed field
            u32,
            /// This is the second unnamed field
            u32,
        ),
    }
    functions {
        /// Some multiline description
        /// Second line
        /// Third line
        DoThat(par1: DoThatParam) -> Result<(String, u32), (String)>;
        /// Some description
        DoThis(p1: u32, p2: String, p3: (Option<String>, u8), p4: TupleStruct, p5: GenericStruct<H256>, p6: GenericStruct<String>, p7: GenericConstStructN8, p8: GenericConstStructN32) -> String;
        /// This is a second query
        /// This is a second line
        @query
        That(pr1: ThatParam) -> String;
        /// This is a query
        @query
        This(p1: u32, p2: String, p3: (Option<String>, u8), p4: TupleStruct, p5: GenericEnum<bool, u32>) -> Result<(String, u32), String>;
    }
    types {
        struct DoThatParam {
            p1: u32,
            p2: String,
            p3: ManyVariants,
        }
        /// GenericConstStruct docs
        struct GenericConstStructN32 {
            /// GenericStruct field `field`
            field: [u8; 32],
        }
        /// GenericConstStruct docs
        struct GenericConstStructN8 {
            /// GenericStruct field `field`
            field: [u8; 8],
        }
        /// GenericEnum docs
        /// with two lines
        enum GenericEnum<T1, T2> {
            /// GenericEnum `Variant1` of type 'T1'
            Variant1(T1),
            /// GenericEnum `Variant2` of type 'T2'
            Variant2(T2),
        }
        /// GenericStruct docs
        struct GenericStruct<T> {
            /// GenericStruct field `p1`
            p1: T,
        }
        enum ManyVariants {
            One,
            Two(u32),
            Three(Option<[U256]>),
            Four {
                a: u32,
                b: Option<u16>,
            },
            Five(String, [u8]),
            Six((u32)),
            Seven(GenericEnum<u32, String>),
            Eight([[(u32, String)]; 10]),
        }
        struct ThatParam {
            p1: ManyVariants,
        }
        /// TupleStruct docs
        struct TupleStruct(bool);
    }
}

program TestProgramWithNonEmptyCtorsMeta {
    constructors {
        /// This is New constructor
        New();
        /// This is FromStr constructor
        /// with second line
        FromStr(p1: String);
    }
    services {
        Test@0xd42ae9a4dc1efdf0,
    }
}
